@@ -112,6 +112,8 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12049. Control http authentication cookie persistence via
     configuration. (hzlu via benoy)
 
+    HADOOP-12878. KMS SPNEGO sequence does not work with WEBHDFS. (xyao)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
